--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@
     </div>
     <div id="num9" class="span" onclick="pressed(event)">C
     </div>
-    <div id="num9" class="span" onclick="pressed(event)"><=
+    <div id="num9" class="span" onclick="pressed(event)"><-
     </div>
     <div id="num9" class="span" onclick="operationPressed(event)">/
     </div>
