--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <link href="./css/site.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="./js/main.js"></script>
+    <!--<link href="./css/site.css" rel="stylesheet" type="text/css">-->
+    <!--<script type="text/javascript" src="./js/main.js"></script>-->
     <title>Calculator</title>
 </head>
 
