--- a/src/index.html
+++ b/src/index.html
@@ -1,56 +1,56 @@
 <html>
 
-<head>
-    <!--<link href="./css/site.css" rel="stylesheet" type="text/css">-->
-    <!--<script type="text/javascript" src="./js/main.js"></script>-->
-    <title>Calculator</title>
-</head>
+    <head>
+        <!--<link href="./css/site.css" rel="stylesheet" type="text/css">-->
+        <!--<script type="text/javascript" src="./js/main.js"></script>-->
+        <title>Calculator</title>
+    </head>
 
-<body>
-    <div id="calcDisplay" class="calcDisplay">
-    </div>
-    <div id="num9" class="span" onclick="reset()">CE
-    </div>
-    <div id="num9" class="span" onclick="pressed(event)">C
-    </div>
-    <div id="num9" class="span" onclick="pressed(event)"><-
-    </div>
-    <div id="num9" class="span" onclick="operationPressed(event)">/
-    </div>
-    <div id="num9" class="span" onclick="numberPressed(event)">7
-    </div>
-    <div id="num9" class="span" onclick="numberPressed(event)">8
-    </div>
-    <div id="num9" class="span" onclick="numberPressed(event)">9
-    </div>
-    <div id="num9" class="span" onclick="operationPressed(event)">*
-    </div>
-    <div id="num9" class="span" onclick="numberPressed(event)">4
-    </div>
-    <div id="num8" class="span" onclick="numberPressed(event)">5
-    </div>
-    <div id="num7" class="span" onclick="numberPressed(event)">6
-    </div>
-    <div id="num6" class="span" onclick="operationPressed(event)">-
-    </div>
-    <div id="num5" class="span" onclick="numberPressed(event)">1
-    </div>
-    <div id="num4" class="span" onclick="numberPressed(event)">2
-    </div>
-    <div id="num3" class="span" onclick="numberPressed(event)">3
-    </div>
-    <div id="num2" class="span" onclick="operationPressed(event)">+
-    </div>
-    <div id="num1" class="span" onclick="pressed(event)">+/-
-    </div>
-    <div id="num1" class="span" onclick="numberPressed(event)">0
-    </div>
-    <div id="num1" class="span" onclick="pressed(event)">,
-    </div>
-    <div id="num1" class="span" onclick="result()">=
-    </div>
-    <div id="winner">
-    </div>
-</body>
+    <body>
+        <div id="calcDisplay" class="calcDisplay">
+        </div>
+        <div id="CE" class="span">CE
+        </div>
+        <div id="C" class="span">C
+        </div>
+        <div id="delete" class="span"><-
+        </div>
+        <div id="divide" class="span">/
+        </div>
+        <div id="num7" class="span">7
+        </div>
+        <div id="num8" class="span">8
+        </div>
+        <div id="num9" class="span">9
+        </div>
+        <div id="multiply" class="span">*
+        </div>
+        <div id="num4" class="span">4
+        </div>
+        <div id="num5" class="span">5
+        </div>
+        <div id="num6" class="span">6
+        </div>
+        <div id="substract" class="span">-
+        </div>
+        <div id="num1" class="span">1
+        </div>
+        <div id="num2" class="span">2
+        </div>
+        <div id="num3" class="span">3
+        </div>
+        <div id="add" class="span">+
+        </div>
+        <div id="sign" class="span">+/-
+        </div>
+        <div id="num0" class="span">0
+        </div>
+        <div id="comma" class="span">,
+        </div>
+        <div id="result" class="span" onclick="result()">=
+        </div>
+        <div id="winner">
+        </div>
+    </body>
 
 </html>
