Added some Button classes

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="calcDisplay" class="calcDisplay">
         </div>
-        <div id="CE" class="span">CE
+        <div id="reset" class="span">CE
         </div>
         <div id="C" class="span">C
         </div>
@@ -47,7 +47,7 @@
         </div>
         <div id="comma" class="span">,
         </div>
-        <div id="result" class="span" onclick="result()">=
+        <div id="result" class="span">=
         </div>
         <div id="winner">
         </div>
